test/assets/error/dskip_overflow.hera
DSKIP(0xFFFF)
DLABEL(N)
INTEGER(42)

SET(R1, N)
